fixing the font sizes as they were too small

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ form input{
     outline: 0;
     background: transparent;
     color: #fff;
-    font-size: 18px;
+    font-size: 38px;
     padding: 0 30px;
 }
 
@@ -47,7 +47,7 @@ form button{
     height: 100%;
     background: #ff3929;
     color: #fff;
-    font-size: 18px;
+    font-size: 38px;
     border: 0;
     outline: 0;
     border-top-right-radius: 8px;
@@ -57,7 +57,7 @@ form button{
 
 ::placeholder{
     color: #fff;
-    font-size: 18px;
+    font-size: 38px;
 }
 
 #show-more-btn{
